# ArchiveMount

./: Cargo.toml  README.md  README.zh.md  build.bat
ArchiveMount-CLI/: Cargo.toml  build.bat
ArchiveMount-CLI/assets-ARM64/: dokan1.sys
ArchiveMount-CLI/assets-x64/: dokan1.sys
ArchiveMount-CLI/resource/: resource.rc
ArchiveMount-CLI/src/: cli.rs  main.rs  test.rs
ArchiveMount-CLI/src/utils/: console.rs  util.rs
ArchiveMount-Core/: Cargo.toml
ArchiveMount-Core/ref/FreeMount/: FileSystem.cs
ArchiveMount-Core/ref/WinAVFS/WinAVFS.CLI/: Program.cs
ArchiveMount-Core/ref/WinAVFS/WinAVFS.Core/: ReadOnlyAVFS.cs
ArchiveMount-Core/resource/: resource.rc
ArchiveMount-Core/src/: ArchiveFS.rs  cli.rs  main.rs  sevenZip.rs  tests.rs
ArchiveMount-Core/src/utils/: console.rs  mod.rs  util.rs
assets-x86/: dokan1.sys
ref/: Program.cs  SevenZipFs.cs  tests.rs
ref/free-mount/: Free mount.sln  README.MD
ref/free-mount/Free Mount/: MainWindow.xaml  MainWindow.xaml.cs
resource/: resource.rc
src/: ArchiveFS.rs  cli.rs  main.rs  sevenZip.rs  sevenzip.rs  tests.rs
src/utils/: console.rs  util.rs
