[package]
name = "ArchiveMount"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
embed-resource = "1.6.5"

# 优化编译体积
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
vc-ltl = "5.0.3"
console = "0.15.0"
rust-embed = "6.3.0"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
widestring = "0.4.3"
winapi = { version = "0.3.9", features = ["ntstatus"] }
lru = "0.7.5"
ctrlc = "3.2.0"
# 目前Dokan未适配V2.0支持
dokan = "0.2.0+dokan150"
