[package]
name = "ArchiveMount-CLI"
version = "0.4.0"
edition = "2021"

[build-dependencies]
embed-resource = "1.6.5"

# 优化编译体积
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.8", features = ["derive"] }
vc-ltl = "5.0.3"
console = "0.15.0"
rust-embed = "6.3.0"
lazy_static = "1.4.0"
winapi = { version = "0.3.9", features = ["winsvc", "winnt"] }
